<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentCreamLight"
    tools:context="com.dfa.virginiatech.activt.SurveyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="@dimen/question_response_margin"
            android:textAlignment="center"
            android:textColor="@color/questionColor"
            android:id="@+id/q_1"
            android:text="@string/question_1"
            android:textSize="@dimen/question_text_size"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/response_bottom_margin"
            android:orientation="horizontal"
            android:id="@+id/q1_group">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r1_1"
                android:text="@string/response1_1"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r1_2"
                android:text="@string/response1_2"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r1_3"
                android:text="@string/response1_3"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r1_4"
                android:text="@string/response1_4"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r1_5"
                android:text="@string/response1_5"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r1_6"
                android:text="@string/response1_6"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r1_7"
                android:text="@string/response1_7"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="@dimen/question_response_margin"
            android:textAlignment="center"
            android:textColor="@color/questionColor"
            android:id="@+id/q_2"
            android:text="@string/question_2"
            android:textSize="@dimen/question_text_size"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/response_bottom_margin"
            android:orientation="horizontal"
            android:id="@+id/q2_group">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r2_1"
                android:text="@string/response2_1"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r2_2"
                android:text="@string/response2_2"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r2_3"
                android:text="@string/response2_3"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="@dimen/question_response_margin"
            android:textAlignment="center"
            android:textColor="@color/questionColor"
            android:id="@+id/q_3"
            android:text="@string/question_3"
            android:textSize="@dimen/question_text_size"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/response_bottom_margin"
            android:orientation="vertical"
            android:id="@+id/q3_group">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r3_1"
                android:text="@string/response3_1"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r3_2"
                android:text="@string/response3_2"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r3_3"
                android:text="@string/response3_3"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r3_4"
                android:text="@string/response3_4"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r3_5"
                android:text="@string/response3_5"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="@dimen/question_response_margin"
            android:textAlignment="center"
            android:textColor="@color/questionColor"
            android:id="@+id/q_4"
            android:text="@string/question_4"
            android:textSize="@dimen/question_text_size"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/response_bottom_margin"
            android:orientation="vertical"
            android:id="@+id/q4_group">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r4_1"
                android:text="@string/response4_1"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r4_2"
                android:text="@string/response4_2"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r4_3"
                android:text="@string/response4_3"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r4_4"
                android:text="@string/response4_4"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r4_5"
                android:text="@string/response4_5"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r4_6"
                android:text="@string/response4_6"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r4_7"
                android:text="@string/response4_7"/>
        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:text="@string/submit"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"/>
    </LinearLayout>

</ScrollView>
